crates/server-less/tests/fixtures/http_wrong_type_str_arg.stderr
error: expected string literal
 --> tests/fixtures/http_wrong_type_str_arg.rs:6:17
  |
6 | #[http(prefix = false)]
  |                 ^^^^^
